feat(atribuicao): comunicacao com o servico de criacao concluido e testado

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=badgeassignment
+
 spring.datasource.url=jdbc:mysql://mysql-boss-tarefaboss.a.aivencloud.com:11138/atribuiBadge
 spring.datasource.username=avnadmin
 spring.datasource.password=AVNS_dGGPIb35uFVgAxd9JNL
@@ -19,6 +20,10 @@ jwt.expiration=3600000
 
 server.port=8081
 
-
 # Ativar endpoint de saúde
 management.endpoints.web.exposure.include=health
+
+# Habilitar o DevTools
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=true
+
