feat(atribuicao): verifica recebimento e valida

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,13 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Configurações de e-mail
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=seu_email@example.com
-spring.mail.password=sua_senha
+spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=163adbbb2c4a6b
+spring.mail.password=fa76fa9d47dcf5
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
 
 # JWT
 jwt.secret=my_super_secret_key_that_is_very_long_and_secure_1234567890
