--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,20 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Configurações de e-mail
-spring.mail.host=sandbox.smtp.mailtrap.io
-spring.mail.port=2525
-spring.mail.username=163adbbb2c4a6b
-spring.mail.password=fa76fa9d47dcf5
+#spring.mail.host=sandbox.smtp.mailtrap.io
+#spring.mail.port=2525
+#spring.mail.username=163adbbb2c4a6b
+#spring.mail.password=fa76fa9d47dcf5
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=testetcc982@gmail.com
+spring.mail.password=csml zfiy pawh jyuy
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
 
 
 # JWT
